--- a/index.html
+++ b/index.html
@@ -16,5 +16,48 @@
 </head>
 
 <body>
+    	<header>
+		<nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-nav-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a href="#" class="navbar-brand">Brand</a>
+				</div>
 
+				<div class="collapse navbar-collapse" id="example-nav-collapse">
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="#">Link 1</a></li>
+						<li><a href="#">Link 2</a></li>
+					</ul>
+
+					<a href="#" class="btn btn-default navbar-btn">This is a button</a>
+
+					<p class="navbar-text">Hello!</p>
+
+					<form action="" class="navbar-form navbar-right" role="search">
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="Search">
+						</div>
+						<button type="submit" class="btn btn-default">Submit</button>
+					</form>
+				</div>
+			</div>	
+		</nav>
+
+		
+	</header>
+
+
+
+
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </body>
