--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Bootstrap Demo</title>
+    <title>Szkolenie z AngularJs</title>
 
     <!-- Mobile Specific Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -24,7 +24,6 @@
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
 					<a href="#" class="navbar-brand">Brand</a>
