--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand">Brand</a>
+					<a href="#" class="navbar-brand"><span class="glyphicon glyphicon-euro"></span></a>
 				</div>
 
 				<div class="collapse navbar-collapse" id="example-nav-collapse">
