--- a/index.html
+++ b/index.html
@@ -16,47 +16,69 @@
 </head>
 
 <body>
-    	<header>
-		<nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
-			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-nav-collapse">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a href="#" class="navbar-brand"><span class="glyphicon glyphicon-euro"></span></a>
-				</div>
+    <header>
+        <nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-nav-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a href="#" class="navbar-brand"><span class="glyphicon glyphicon-euro"></span></a>
+                </div>
 
-				<div class="collapse navbar-collapse" id="example-nav-collapse">
-					<ul class="nav navbar-nav">
-						<li class="active"><a href="#">Link 1</a></li>
-						<li><a href="#">Link 2</a></li>
-					</ul>
-
-					<a href="#" class="btn btn-default navbar-btn">This is a button</a>
-
-					<p class="navbar-text">Hello!</p>
-
-					<form action="" class="navbar-form navbar-right" role="search">
-						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Search">
-						</div>
-						<button type="submit" class="btn btn-default">Submit</button>
-					</form>
-				</div>
-			</div>	
-		</nav>
-
-		
-	</header>
-
+                <div class="collapse navbar-collapse" id="example-nav-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">Wydatki</a>
+                        </li>
+                        <li><a href="#">Przychody</a>
+                        </li>
+                        <li>
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+                                    Okres rozliczeniowy (styczen)
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">2014-01-01</a>
+                                    </li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">2014-02-01</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
 
 
+                    <div class="navbar-form navbar-right">
+                        <button class="btn btn-default dropdown-toggle glyphicon glyphicon-search" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Definiuj okres rozliczeniowy</a>
+                            </li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Domyslne platnosci</a>
+                            </li>
+                           <li role="presentation" class="divider"></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">O programie</a>
+                            </li>
+                        </ul>
+               </div>
+
+                </div>
+            </div>
+        </nav>
 
 
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    </header>
+
+
+
+
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </body>
