--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
                     <div class="navbar-form navbar-right">
-                        <button class="btn btn-default dropdown-toggle glyphicon glyphicon-search" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+                        <button class="btn btn-default dropdown-toggle glyphicon glyphicon-cog" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
