--- a/index.html
+++ b/index.html
@@ -61,17 +61,24 @@
                             </li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Domyslne platnosci</a>
                             </li>
-                           <li role="presentation" class="divider"></li>
+                            <li role="presentation" class="divider"></li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">O programie</a>
                             </li>
                         </ul>
-               </div>
+                    </div>
 
+                    
+                    
                 </div>
             </div>
         </nav>
 
-
+        <!-- jambo -->
+            <div class="jumbotron">
+              <h1>Budzet domowy<h1>
+              <p>Miesiac rozliczeniowy: 2015/01</p>
+              <h3>Aktualna data: 2015/01/16</h3>
+        </div>
     </header>
 
 
