--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Domyslne platnosci</a>
                             </li>
                             <li role="presentation" class="divider"></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">O programie</a>
+                            <li role="presentation">
+                                <a role="menuitem" tabindex="-1" href="#" data-toggle="modal" data-target="#about">O programie</a>
+
                             </li>
                         </ul>
                     </div>
@@ -139,6 +141,24 @@
             
     <hr/>
 
+    <!-- Modal -->
+<div class="modal fade" id="about" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Zliczanie wydatków żony</h4>
+      </div>
+      <div class="modal-body">
+       Zliczanie wydatków kochanej żony.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
