--- a/04-budzet/index.html
+++ b/04-budzet/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="budget">
 
 <head>
     <meta charset="utf-8">
@@ -11,10 +11,13 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    
+    <script src="http://code.angularjs.org/1.2.13/angular.min.js"></script>
+    <script src="controllers.js"></script>
 
 </head>
 
-<body data-spy="scroll" data-target="#main-navbar">
+<body data-spy="scroll" data-target="#main-navbar" ng-controller="MainCtrl">
     <header>
         <nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation" id="main-navbar">
             
