calculate total expences

--- a/04-budzet/index.html
+++ b/04-budzet/index.html
@@ -106,7 +106,7 @@
 
                             <div class="row">
                                 <div class="col-sm-6 text-left">W sumie wydatków:</div>
-                                <div class="col-sm-6 text-right">124.00 PLN</div>
+                                <div class="col-sm-6 text-right">{{getTotalExpenses()}} PLN</div>
                             </div>
                             <div class="row">
                                 <div class="col-sm-6 text-left">Już zapłacono:</div>
