--- a/04-budzet/index.html
+++ b/04-budzet/index.html
@@ -184,7 +184,7 @@
                     </div>
                     <div class="col-xs-2 text-center">
                         <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
+                        <button type="button" class="btn btn-default glyphicon glyphicon-trash" ng-click="removeExpense(expense)"></button>
                     </div>
                 </div>
 
