Add new expense

--- a/04-budzet/index.html
+++ b/04-budzet/index.html
@@ -599,28 +599,28 @@
                         <div class="modal-body">
                             <div class="form-group">
                                 <label for="expense-title" class="control-label">Tytuł wydatku</label>
-                                <input type="text" id="expense-title" class="form-control">
+                                <input ng-model="newExpense.title" type="text" id="expense-title" class="form-control">
                                 <p class="help-block">Tytuł pozycji</p>
                             </div>
                             <div class="form-group">
                                 <label for="expense-amount" class="control-label">Kwota</label>
-                                <input type="text" id="expense-amount" class="form-control">
+                                <input ng-model="newExpense.amount" type="text" id="expense-amount" class="form-control">
                                 <p class="help-block">Kwota wydatku w formacie xx.yy</p>
                             </div>
                             <div class="form-group">
                                 <label for="expense-description" class="control-label">Opis</label>
-                                <input type="text" id="expense-description" class="form-control">
+                                <input ng-model="newExpense.description" type="text" id="expense-description" class="form-control">
                                 <p class="help-block">Dłuższy opis pozycji</p>
                             </div>
                             <div class="form-group">
                                 <label for="expense-date" class="control-label">Data płatności</label>
-                                <input type="text" id="expense-date" class="form-control">
+                                <input ng-model="newExpense.deadline" type="text" id="expense-date" class="form-control">
                                 <p class="help-block">Termin dokonania płatności.</p>
                             </div>
                         </div>
                         <div class="modal-footer">
                             <a href="#" class="btn btn-default" data-dismiss="modal">Close</a>
-                            <button type="submit" class="btn btn-default">Save</button>
+                            <button ng-click="addExpense()" data-dismiss="modal" type="button" class="btn btn-default">Save</button>
                         </div>
                     </form>
                 </div>
