--- a/04-budzet/index.html
+++ b/04-budzet/index.html
@@ -215,324 +215,11 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-xs-2">Pensja Impaq</div>
-                    <div class="col-xs-2">100.00 PLN</div>
-                    <div class="col-xs-2">2015-01-10</div>
-                    <div class="col-xs-4">Pensja</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
-                    <div class="col-xs-2 text-center">
-                        <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
-                        <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">Fucha</div>
-                    <div class="col-xs-2">10.00 PLN</div>
-                    <div class="col-xs-2">2015-01-20</div>
-                    <div class="col-xs-4">Szkolenie z Angulara</div>
+                <div class="row" ng-repeat="income in incomes">
+                    <div class="col-xs-2">{{income.title}}</div>
+                    <div class="col-xs-2">{{income.amount}}</div>
+                    <div class="col-xs-2">{{income.date}}</div>
+                    <div class="col-xs-4">{{income.description}}</div>
                     <div class="col-xs-2 text-center">
                         <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
                         <button type="button" class="btn btn-default glyphicon glyphicon-trash"></button>
