--- a/04-budzet/index.html
+++ b/04-budzet/index.html
@@ -6,14 +6,21 @@
     <title>Budżet domowy</title>
     <meta name="author" content="Maciej Stopczyk">
 
-    <!-- Mobile Specific Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
-    <script src="http://code.angularjs.org/1.2.13/angular.min.js"></script>
+
+
+    <!--    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script>-->
+    <!--    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.0.js"></script>-->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.0/ui-bootstrap.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
+    <!--    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">-->
+
     <script src="controllers.js"></script>
 
 </head>
@@ -41,7 +48,7 @@
                         </li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Okres rozliczeniowy ({{currentPeriod}}) <span class="caret"></span></a>
-                
+
                             <ul class="dropdown-menu" role="menu">
                                 <li ng-repeat="period in periods"><a href="#" ng-click="changeCurrentPeriod(period)">{{period}}</a>
                                 </li>
@@ -176,11 +183,11 @@
                     <div class="col-xs-2">{{expense.title}} <span class="glyphicon glyphicon-bell"></span>
                     </div>
                     <div class="col-xs-2">{{expense.amount}}</div>
-                    <div class="col-xs-2">{{expense.deadline}}</div>
+                    <div class="col-xs-2">{{expense.deadline | date:"yyyy-MM-dd"}}</div>
                     <div class="col-xs-2">{{expense.description}}</div>
                     <div class="col-xs-2 text-center">
                         <button ng-click="markAsPaid(expense)" ng-show="!expense.paid" type="button" class="btn btn-default glyphicon glyphicon-credit-card"></button>
-                        <span ng-show="expense.paid">{{expense.paidDate}}</span>
+                        <span ng-show="expense.paid">{{expense.paidDate | date:"yyyy-MM-dd"}}</span>
                     </div>
                     <div class="col-xs-2 text-center">
                         <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
@@ -218,7 +225,7 @@
                 <div class="row" ng-repeat="income in incomes">
                     <div class="col-xs-2">{{income.title}}</div>
                     <div class="col-xs-2">{{income.amount}}</div>
-                    <div class="col-xs-2">{{income.date}}</div>
+                    <div class="col-xs-2">{{income.date | date:"yyyy-MM-dd"}}</div>
                     <div class="col-xs-4">{{income.description}}</div>
                     <div class="col-xs-2 text-center">
                         <button type="button" class="btn btn-default glyphicon glyphicon-edit"></button>
@@ -259,9 +266,18 @@
                             </div>
                             <div class="form-group">
                                 <label for="income-date" class="control-label">Data wpłaty</label>
-                                <input type="text" ng-model="newIncome.date" id="income-date" class="form-control">
+                                <div class="row">
+                                    <div class="col-xs-10">
+                                        <input type="text" id="income-date" class="form-control" datepicker-popup="{{datePickerFormat}}" datepicker-options="datePickerOptions" ng-model="newIncome.date" is-open="opened" ng-required="true" close-text="Close" />
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <button type="button" class="btn btn-default" ng-click="datePickerOpen($event)"><i class="glyphicon glyphicon-calendar"></i>
+                                        </button>
+                                    </div>
+                                </div>
                                 <p class="help-block">Termin otrzymania płatności.</p>
                             </div>
+
                         </div>
                         <div class="modal-footer">
                             <a href="#" class="btn btn-default" data-dismiss="modal">Close</a>
@@ -301,7 +317,15 @@
                             </div>
                             <div class="form-group">
                                 <label for="expense-date" class="control-label">Data płatności</label>
-                                <input ng-model="newExpense.deadline" type="text" id="expense-date" class="form-control">
+                                <div class="row">
+                                    <div class="col-xs-10">
+                                        <input type="text" id="expense-date" class="form-control" datepicker-popup="{{datePickerFormat}}" datepicker-options="datePickerOptions" ng-model="newExpense.deadline" is-open="opened" ng-required="true" close-text="Close" />
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <button type="button" class="btn btn-default" ng-click="datePickerOpen($event)"><i class="glyphicon glyphicon-calendar"></i>
+                                        </button>
+                                    </div>
+                                </div>
                                 <p class="help-block">Termin dokonania płatności.</p>
                             </div>
                         </div>
@@ -396,7 +420,6 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-
 </body>
 
 </html>
