--- a/04-budzet/index.html
+++ b/04-budzet/index.html
@@ -256,7 +256,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="income-amount" class="control-label">Kwota</label>
-                                <input type="text" ng-model="newIncome.amount" id="income-amount" class="form-control">
+                                <input type="text" ng-model="newIncome.amount" id="income-amount" class="form-control" numbers-only="true">
                                 <p class="help-block">Kwota przychodu w formacie xx.yy</p>
                             </div>
                             <div class="form-group">
@@ -307,7 +307,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="expense-amount" class="control-label">Kwota</label>
-                                <input ng-model="newExpense.amount" type="text" id="expense-amount" class="form-control">
+                                <input ng-model="newExpense.amount" type="text" id="expense-amount" class="form-control" numbers-only="true">
                                 <p class="help-block">Kwota wydatku w formacie xx.yy</p>
                             </div>
                             <div class="form-group">
