--- a/04-budzet/index.html
+++ b/04-budzet/index.html
@@ -62,7 +62,7 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-cog"></span></a>
                             <!--                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-cog"></span></button>-->
                             <ul class="dropdown-menu" role="menu">
-                                <li role="presentation"><a href="#" role="menuitem" tabindex="-1">Definiuj nowy okres rozliczeniowy</a>
+                                <li role="presentation"><span data-toggle="modal" data-target="#period-modal" role="menuitem" tabindex="-1">Definiuj nowy okres rozliczeniowy</span>
                                 </li>
                                 <li role="presentation"><a href="#" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#default-values-modal">Domyślne płatności</a>
                                 </li>
@@ -397,6 +397,27 @@
                     </div>
                     <div class="modal-footer">
                         <a href="#" class="btn btn-default" data-dismiss="modal">Close</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="modal fade" id="period-modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Add new period</h4>
+                    </div>
+                    <div class="modal-body">
+
+                        <input type="text" ng-model="period"/>
+
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#" class="btn btn-default" data-dismiss="modal">Close</a>
+                        
+                        <button class="btn btn-default" data-dismiss="modal" ng-click="saveNewPeriod(period)">Save</button>
                     </div>
                 </div>
             </div>
